force-app/main/default/objects/Approve_Request__c/Approve_Request__c.object-meta.xml
<CustomObject>
    <label>Approve Request</label>
    <nameField>
        <displayFormat>APR-{000000000}</displayFormat>
        <label>Approve Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approve Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>