force-app/main/default/objects/Approve_Request__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transfer Certificate(TC)</fullName>
            </value>
            <value>
                <fullName>Bonafide Certificate</fullName>
            </value>
            <value>
                <fullName>SSC Certificate</fullName>
            </value>
            <value>
                <fullName>Inter Certificate</fullName>
            </value>
            <value>
                <fullName>Leave Requests</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>