force-app/main/default/objects/Approve_Request__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>Approve Requests</relationshipLabel>
    <relationshipName>Approve_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>