force-app/main/default/objects/Approve_Request__c/fields/Student_ID__c.field-meta.xml
<CustomField>
    <fullName>Student_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student ID</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Approve Requests</relationshipLabel>
    <relationshipName>Approve_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>